syntax = "proto3";
option go_package = "./;module";
package client;

message file_upload_info {
  string  file_id = 1;
  string  file_hash = 2;
  string  backups = 3;
  int32   block_total = 4;//block_total
  int32   block_size=5;
  int32   block_index=6;//block_index
  bytes   data=7;
}

message file_download_info {
  string  file_id=1;
  int32   block_total=2;
  int32   block_size=3;
  int32   block_index=4;
  bytes   data=5;
}

message file_download_req{
  string  file_id=1;
  string  walletAddress=2;
  int32   block_index=3;
}